# CPPCore

./: .gitignore  CMakeLists.txt  Draft.cpp  Main  Main.cpp
L01_VariablesAndDataTypes/: ConstantsDeclaration.cpp  DataTypes.cpp  Define.cpp  HelloWorld.cpp  SizeOfDataTypes.cpp  TypesOfDeclarations.cpp  VariablesDeclaration.cpp
L02_Operators/: FloatingPointNumbers.cpp  Operator.cpp
L02_Operators/Exercises/: Ex01_TriangleArea.cpp  Ex02_AverageMark.cpp
L03_ConditionalStatements/Exercises/: Ex01_FizzBuzz.cpp  Ex02_EvenOdd.cpp  Ex03_TriangleValidation.cpp
L03_InputOutput/: Exercises  Exercises.cpp  Input.cpp  Output.cpp
L04_ConstantsAndDefine/: ConstantsDeclaration.cpp
L04_Loops/Exercises/: Ex05_AverageMark.cpp
L05_Enums/: Enums.cpp
L06_ConditionalStatements/: IfElse  IfElse.cpp
L06_ConditionalStatements/Exercises/: Ex04_LeapYear.cpp  Ex06_VowelsConsonants.cpp
L08_NameVisibility/: README.md  examples.cpp
L09_CharacterSequences/: InputOutput.cpp  StringCharProblems.cpp
L09_Functions/: README.md  examples.cpp
L10_OverloadingAndTemplates/: README.md  examples.cpp
L11_Recursion/: README.md
L12_Arrays/: README.md  examples.cpp
L13_Pointers/: IntroductionToPointers.cpp  PassPyValue.cpp  Pointers.cpp  PointersOfIntegersAndString.cpp  README.md
L14_CharacterSequences/: CharactersAndString.cpp  InputOutput.cpp  README.md  examples.cpp
L15_Vector/: README.md  examples.cpp
L15_Vectors/: examples
L16_Structs/: README.md  Struct.cpp
L17_Classes/: README.md
L18_Tuples/: README.md
L19_Pairs/: README.md
L20_Maps/: README.md  maps  maps.cpp
(+127 files in other folders)
